--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       run: npx electron-builder --win --x64
 
     - name: Upload Build Artifact
-      uses: actions/upload-artifact@v3.x
+      uses: actions/upload-artifact@v3.1.3
       with:
         name: windows-build
         path: dist/*.exe
