--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  ACTIONS_STEP_DEBUG: true
+
 jobs:
   build:
     runs-on: windows-latest
@@ -28,8 +31,11 @@ jobs:
     - name: Package App for Windows
       run: npx electron-builder --win --x64
 
+    - name: List files in dist
+      run: dir dist
+
     - name: Upload Build Artifact
-      uses: actions/upload-artifact@v3.1.3
+      uses: actions/upload-artifact@v3
       with:
         name: windows-build
         path: dist/*.exe
