--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "build": {
     "appId": "com.playepik.taskify",
     "productName": "Taskify",
+    "directories": {
+      "output": "dist"
+    },
     "win": {
       "target": "nsis"
     }
