--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Build Electron app
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: npx electron-builder --linux --x64 --publish always
+        run: npx electron-builder --linux AppImage --x64 --publish always
