--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "chart.js": "^4.4.9",
     "dotenv": "^16.5.0",
     "dotnet": "^1.1.4"
   }
