--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -19,14 +19,18 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 22
+          node-version: 24 
 
       # Install dependencies
       - name: Install dependencies
         run: npm install && npm install electron
 
+      #Updating Packages
+      - name: Updating Packages
+        run: npx npm-check-updates && npx && npx npm-check-updates -u && npm install
+
       # Build the Electron app
       - name: Build Electron app
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: npx electron-builder --linux AppImage --x64 --publish always
+        run: npx electron-builder --linux AppImage,rpm,deb --x64 --publish always
