--- a/.github/workflows/windowsX32.yml
+++ b/.github/workflows/windowsX32.yml
@@ -28,12 +28,20 @@ jobs:
       - name: Install dependencies
         run: npm install && npm install electron
 
-      #Updating Packages
+      # Updating Packages
       - name: Updating Packages
-        run: npx npm-check-updates && npx && npx npm-check-updates -u && npm install
+        run: npx check-updates && npx npm-check-updates -u && npm install
 
       # Build the Electron app
       - name: Build Electron app
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: npx electron-builder --win --ia32 --publish always
+        run: |
+          npx electron-builder --win --ia32 --config win.artifactName="TaskifyBusiness-${{ github.ref_name }}-x32.${ext}" --publish always
+
+      #Upload Artifact
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: TaskifyBusiness-ia32
+          path: dist/*.exe
