--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.6.0",
   "description": "An app for Professionals Companies with better management of Maintenance Tasks",
   "license": "Apache",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Play-Epik-Inc/Taskify-Business"
+  },
   "author": {
     "name": "Play Epik, Incoporation",
     "email": "help.playepik@gmail.com"
