--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@supabase/supabase-js": "^2.77.0",
     "chart.js": "^4.5.1",
     "dotenv": "^17.2.3",
+    "electron-progressbar": "^2.2.1",
     "npm": "^11.6.2"
   }
 }
