--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "chart.js": "^4.5.1",
     "dotenv": "^17.2.3",
     "electron-progressbar": "^2.2.1",
+    "follow-redirects": "^1.15.11",
     "npm": "^11.6.2"
   }
 }
