--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "main": "config.js",
   "scripts": {
     "start": "electron .",
+    "dev" : "npm run start -- --dev",
     "build": "electron-builder",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
