--- a/package.json
+++ b/package.json
@@ -108,7 +108,10 @@
   "overrides": {
     "tar": "^7.5.6",
     "@electron/rebuild": {
-      "tar": "^6.2.3"
+      "tar": "6.2.1"
+    },
+    "app-builder-lib": {
+      "tar": "6.2.1"
     }
   }
 }
