--- a/package.json
+++ b/package.json
@@ -102,16 +102,6 @@
     "glob": "^13.0.0",
     "js-yaml": "^4.1.1",
     "npm": "^11.8.0",
-    "semver": "^7.7.3",
-    "tar": "^7.5.6"
-  },
-  "overrides": {
-    "tar": "^7.5.6",
-    "@electron/rebuild": {
-      "tar": "6.2.1"
-    },
-    "app-builder-lib": {
-      "tar": "6.2.1"
-    }
+    "semver": "^7.7.3"
   }
 }
